--- a/folder/index.html
+++ b/folder/index.html
@@ -25,7 +25,7 @@
         </nav>
 
     </header>
-    <h1>Imagen responsive</h1>
+    <h1>Imagen responsive.</h1>
     <div class="container">
         <img src="peope.jpg">
     </div>
